styles/index.css
/* ... */
progress[value][id="thirst"]::-moz-progress-bar {
    border-radius: 10em;
    background: cornflowerblue;
}

progress[value][id="hunger"]::-moz-progress-bar {
    border-radius: 10em;
    background: lightcoral;
}

/* Themes */

/* Cotton Candy */

.cotton-candy body {
    background: #FFDAEA;
    color: black;
}

.cotton-candy a {
    color: black;
}

.cotton-candy a:hover {
    color: #BA2C65
}

.cotton-candy .article__header {
    background: #EAA1B7
}

.cotton-candy .footer__content {
    background: #EAA1B7
}

.cotton-candy .article__description {
    color: #4A2937;
}

.cotton-candy .button {
    border-color: #EAA1B7;
}

.cotton-candy .button:not(.disabled):hover {
    color: white;
    border-color: #BA2C65;
    background: #BA2C65;
}

.cotton-candy .button:hover path,
.cotton-candy .button:hover circle {
    stroke: white;
}

.cotton-candy .mobile-nav {
    background: #EAA1B7;
}

.cotton-candy .game__option-container {
    border: 5px solid #BA2C65;
}

.cotton-candy .game__container {
    border-color: #BA2C65;
}

.cotton-candy .modal__content {
    border: 5px solid #EAA1B7;
}

.cotton-candy .modal__tab {
    border-color: #EAA1B7
}

.cotton-candy .modal__tabs {
    border-color: #EAA1B7
}

.cotton-candy .modal__tab-button:hover {
    background: #EAA1B7;
}

.cotton-candy .modal__tab-button.is--active {
    background: #EAA1B7;
}

.cotton-candy .modal__item {
    background: #EAA1B7;
}

.cotton-candy .modal__close-button {
    border-color: #EAA1B7;
}

.cotton-candy .modal__close-button:hover {
    border-color: #BA2C65;
}

.cotton-candy .modal__item-button.equipped {
    background: #BA2C65;
    color: white;
}

.cotton-candy progress[value] {
    border: 2px solid #BA2C65;
}

::-webkit-scrollbar {
    width: 6px;
    height: 6px;
    margin: 20px;
    padding: 20px;
}

.cotton-candy ::-webkit-scrollbar-track {
    background: #EAA1B7;
}

.cotton-candy ::-webkit-scrollbar-thumb {
    background: white;
}

/* Handle on hover */
.cotton-candy ::-webkit-scrollbar-thumb:hover {
    background: #BA2C65;
}

.cotton-candy .checkbox__label:before {
    border: 2px solid #BA2C65;
}

.cotton-candy .checkbox__input:checked + .checkbox__label:before {
    background-color: #BA2C65;
    border: 2px solid #BA2C65;
}

/* Ocean Breeze */

.ocean-breeze body {
    background: #def3f6;
    color: black;
}

.ocean-breeze a {
    color: black;
}

.ocean-breeze a:hover {
    color: white;
}

.ocean-breeze .article__header {
    background: #4AB4DE
}

.ocean-breeze .footer__content {
    background: #4AB4DE
}

.ocean-breeze .article__description {
    color: #345DA7;
}

.ocean-breeze .button {
    border-color: #4AB4DE;
}

.ocean-breeze .button:not(.disabled):hover {
    color: white;
    background: #345DA7;
    border-color: #345DA7;
}

.ocean-breeze .button:hover path,
.ocean-breeze .button:hover circle {
    stroke: white;
}

.ocean-breeze .mobile-nav {
    background: #4AB4DE;
}

.ocean-breeze .game__option-container {
    border: 5px solid #345DA7;
}

.ocean-breeze .game__container {
    border-color: #345DA7;
}

.ocean-breeze .modal__content {
    border: 5px solid #4AB4DE;
}

.ocean-breeze .modal__tab {
    border-color: #4AB4DE
}

.ocean-breeze .modal__tabs {
    border-color: #4AB4DE
}

.ocean-breeze .modal__tab-button:hover {
    background: #4AB4DE;
}

.ocean-breeze .modal__tab-button.is--active {
    background: #4AB4DE;
}

.ocean-breeze .modal__item {
    background: #4AB4DE;
}

.ocean-breeze .modal__close-button {
    border-color: #4AB4DE;
}

.ocean-breeze .modal__close-button:hover {
    border-color: #345DA7;
}

.ocean-breeze .modal__item-button.equipped {
    background: #345DA7;
    color: white;
}

.ocean-breeze progress[value] {
    border: 2px solid #345DA7;
    color: white;
}

.ocean-breeze ::-webkit-scrollbar-track {
    background: #4AB4DE;
}

.ocean-breeze ::-webkit-scrollbar-thumb {
    background: white;
}

/* Handle on hover */
.ocean-breeze ::-webkit-scrollbar-thumb:hover {
    background: #345DA7;
}

.ocean-breeze .checkbox__label:before {
    border: 2px solid #345DA7;
}

.ocean-breeze .checkbox__input:checked + .checkbox__label:before {
    background-color: #345DA7;
    border: 2px solid #345DA7;
}

/* Utilities */

.is--hidden {
    display: none;
}

